--- a/argocd/appproject.yaml
+++ b/argocd/appproject.yaml
@@ -15,12 +15,21 @@ spec:
   description: Artifact Keeper multi-environment deployment
   sourceRepos:
     - "https://github.com/artifact-keeper/artifact-keeper.git"
+    - "https://github.com/artifact-keeper/artifact-keeper-iac.git"
   destinations:
     - namespace: artifact-keeper-dev
       server: https://kubernetes.default.svc
     - namespace: artifact-keeper-staging
       server: https://kubernetes.default.svc
     - namespace: artifact-keeper-prod
+      server: https://kubernetes.default.svc
+    - namespace: ak-mesh-main
+      server: https://kubernetes.default.svc
+    - namespace: ak-mesh-peer1
+      server: https://kubernetes.default.svc
+    - namespace: ak-mesh-peer2
+      server: https://kubernetes.default.svc
+    - namespace: ak-mesh-peer3
       server: https://kubernetes.default.svc
   clusterResourceWhitelist:
     - group: ""
