fix: use official ARC sidecar DinD pattern with startup probe

--- a/argocd/arc-e2e-runners-values.yaml
+++ b/argocd/arc-e2e-runners-values.yaml
@@ -3,6 +3,10 @@
 # Provides Docker capability so CI jobs can run docker-compose
 # based E2E test stacks (postgres + backend + test containers).
 #
+# Uses the official ARC sidecar DinD pattern: DinD runs as an init
+# container with restartPolicy: Always (K8s 1.28+ sidecar pattern).
+# A startupProbe ensures dockerd is ready before the runner starts.
+#
 # Deployed via:
 #   helm upgrade --install ak-e2e-runners \
 #     --namespace arc-runners \
@@ -23,10 +27,37 @@ template:
     initContainers:
       - name: init-dind-externals
         image: ghcr.io/actions/actions-runner:latest
-        command: ["cp", "-r", "-v", "/home/runner/externals/.", "/home/runner/tmpDir/"]
+        command: ["cp", "-r", "/home/runner/externals/.", "/home/runner/tmpDir/"]
         volumeMounts:
           - name: dind-externals
             mountPath: /home/runner/tmpDir
+      - name: dind
+        image: docker:dind
+        args:
+          - dockerd
+          - --host=unix:///var/run/docker.sock
+          - --group=$(DOCKER_GROUP_GID)
+        env:
+          - name: DOCKER_GROUP_GID
+            value: "123"
+        securityContext:
+          privileged: true
+        restartPolicy: Always
+        startupProbe:
+          exec:
+            command:
+              - docker
+              - info
+          initialDelaySeconds: 0
+          failureThreshold: 24
+          periodSeconds: 5
+        volumeMounts:
+          - name: work
+            mountPath: /home/runner/_work
+          - name: dind-var
+            mountPath: /var/run
+          - name: dind-externals
+            mountPath: /home/runner/externals
     containers:
       - name: runner
         image: ghcr.io/actions/actions-runner:latest
@@ -37,10 +68,10 @@ template:
         volumeMounts:
           - name: work
             mountPath: /home/runner/_work
+          - name: dind-var
+            mountPath: /var/run
           - name: dind-externals
             mountPath: /home/runner/externals
-          - name: dind-sock
-            mountPath: /var/run
         resources:
           requests:
             cpu: "2"
@@ -48,21 +79,10 @@ template:
           limits:
             cpu: "4"
             memory: "8Gi"
-      - name: dind
-        image: docker:dind
-        securityContext:
-          privileged: true
-        volumeMounts:
-          - name: work
-            mountPath: /home/runner/_work
-          - name: dind-sock
-            mountPath: /var/run
-          - name: dind-externals
-            mountPath: /home/runner/externals
     volumes:
       - name: work
         emptyDir: {}
-      - name: dind-sock
+      - name: dind-var
         emptyDir: {}
       - name: dind-externals
         emptyDir: {}
