fix: use vfs storage driver for DinD (overlay-on-overlay workaround)

--- a/argocd/arc-e2e-runners-values.yaml
+++ b/argocd/arc-e2e-runners-values.yaml
@@ -36,6 +36,7 @@ template:
         args:
           - dockerd
           - --host=unix:///var/run/docker.sock
+          - --storage-driver=vfs
           - --group=$(DOCKER_GROUP_GID)
         env:
           - name: DOCKER_GROUP_GID
