fix: use Recreate strategy for Meilisearch to avoid LMDB lock conflicts
LMDB requires exclusive write access to data.ms. With RollingUpdate, the
old pod holds the lock while the new pod starts, causing exit code 1.
Recreate ensures the old pod is fully terminated before the replacement starts.

--- a/helm/templates/meilisearch-deployment.yaml
+++ b/helm/templates/meilisearch-deployment.yaml
@@ -17,6 +17,8 @@ metadata:
     app.kubernetes.io/component: meilisearch
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       {{- include "artifact-keeper.meilisearch.selectorLabels" . | nindent 6 }}
