--- a/helm/values-mesh-main.yaml
+++ b/helm/values-mesh-main.yaml
@@ -89,11 +89,11 @@ meilisearch:
     storageClass: ""
   resources:
     requests:
-      cpu: 50m
-      memory: 128Mi
-    limits:
       cpu: 250m
-      memory: 512Mi
+      memory: 256Mi
+    limits:
+      cpu: "1"
+      memory: 1Gi
 
 trivy:
   enabled: false
