Add per-component scheduling overrides and topologySpreadConstraints
Each component (backend, web, edge, postgres, meilisearch, trivy,
dependencyTrack) now supports its own tolerations, affinity,
nodeSelector, and topologySpreadConstraints that override the global
defaults. This allows pinning specific workloads to different node
pools (e.g. postgres on SSD nodes) while keeping a shared baseline.

Also adds topologySpreadConstraints to both global and per-component
values for zone-aware pod distribution.

--- a/helm/templates/backend-deployment.yaml
+++ b/helm/templates/backend-deployment.yaml
@@ -27,16 +27,20 @@ spec:
       labels:
         {{- include "artifact-keeper.backend.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.global.tolerations }}
+      {{- with (.Values.backend.tolerations | default .Values.global.tolerations) }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.global.affinity }}
+      {{- with (.Values.backend.affinity | default .Values.global.affinity) }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.global.nodeSelector }}
+      {{- with (.Values.backend.nodeSelector | default .Values.global.nodeSelector) }}
       nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.backend.topologySpreadConstraints | default .Values.global.topologySpreadConstraints) }}
+      topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "artifact-keeper.serviceAccountName" . }}
