--- a/helm/templates/dtrack-deployment.yaml
+++ b/helm/templates/dtrack-deployment.yaml
@@ -25,16 +25,20 @@ spec:
       labels:
         {{- include "artifact-keeper.dtrack.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.global.tolerations }}
+      {{- with (.Values.dependencyTrack.tolerations | default .Values.global.tolerations) }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.global.affinity }}
+      {{- with (.Values.dependencyTrack.affinity | default .Values.global.affinity) }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.global.nodeSelector }}
+      {{- with (.Values.dependencyTrack.nodeSelector | default .Values.global.nodeSelector) }}
       nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.topologySpreadConstraints | default .Values.global.topologySpreadConstraints) }}
+      topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- if .Values.postgres.enabled }}
@@ -217,16 +221,20 @@ spec:
         {{- include "artifact-keeper.dtrack.selectorLabels" . | nindent 8 }}
     spec:
       restartPolicy: OnFailure
-      {{- with .Values.global.tolerations }}
+      {{- with (.Values.dependencyTrack.tolerations | default .Values.global.tolerations) }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.global.affinity }}
+      {{- with (.Values.dependencyTrack.affinity | default .Values.global.affinity) }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.global.nodeSelector }}
+      {{- with (.Values.dependencyTrack.nodeSelector | default .Values.global.nodeSelector) }}
       nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.topologySpreadConstraints | default .Values.global.topologySpreadConstraints) }}
+      topologySpreadConstraints:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
