--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -13,10 +13,12 @@ global:
   imagePullPolicy: Always
   storageClass: standard
 
-  # -- Scheduling: applied to ALL workloads
+  # -- Scheduling constraints applied to ALL workloads by default.
+  # Per-component values (e.g. backend.nodeSelector) override these.
   tolerations: []
   affinity: {}
   nodeSelector: {}
+  topologySpreadConstraints: []
 
 nameOverride: ""
 fullnameOverride: ""
@@ -65,6 +67,11 @@ backend:
   podDisruptionBudget:
     enabled: false
     minAvailable: 1
+  # -- Per-component scheduling (overrides global)
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  topologySpreadConstraints: []
   serviceAccount:
     create: true
     annotations: {}
@@ -92,6 +99,12 @@ web:
       cpu: "1"
       memory: 1Gi
 
+  # -- Per-component scheduling (overrides global)
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  topologySpreadConstraints: []
+
 # -- Edge replication service
 edge:
   enabled: false
@@ -116,6 +129,11 @@ edge:
     limits:
       cpu: 500m
       memory: 512Mi
+  # -- Per-component scheduling (overrides global)
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  topologySpreadConstraints: []
 
 # -- PostgreSQL (in-cluster, disable for external/RDS)
 postgres:
@@ -139,6 +157,11 @@ postgres:
       memory: 1Gi
   initDb:
     enabled: true
+  # -- Per-component scheduling (overrides global)
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  topologySpreadConstraints: []
 
 # -- External database (used when postgres.enabled=false)
 externalDatabase:
@@ -168,6 +191,11 @@ meilisearch:
     limits:
       cpu: "1"
       memory: 1Gi
+  # -- Per-component scheduling (overrides global)
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  topologySpreadConstraints: []
 
 # -- Trivy vulnerability scanner
 trivy:
@@ -185,6 +213,11 @@ trivy:
     limits:
       cpu: "1"
       memory: 2Gi
+  # -- Per-component scheduling (overrides global)
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  topologySpreadConstraints: []
 
 # -- DependencyTrack SBOM analysis
 dependencyTrack:
@@ -205,6 +238,11 @@ dependencyTrack:
       memory: 6Gi
   bootstrap:
     enabled: true
+  # -- Per-component scheduling (overrides global)
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  topologySpreadConstraints: []
 
 # -- Ingress configuration
 ingress:
