Add pod scheduling controls with per-component overrides (#9)
Adds tolerations, affinity, nodeSelector, and topologySpreadConstraints
to all workloads (backend, web, edge, postgres, meilisearch, trivy,
dependencyTrack). Global defaults apply to all pods, with per-component
values available to override them.

Tested on Rocky Linux (k8s 1.31): default install, global scheduling,
and per-component overrides all verified on running pods.

--- a/helm/templates/dtrack-deployment.yaml
+++ b/helm/templates/dtrack-deployment.yaml
@@ -25,6 +25,22 @@ spec:
       labels:
         {{- include "artifact-keeper.dtrack.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with (.Values.dependencyTrack.tolerations | default .Values.global.tolerations) }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.affinity | default .Values.global.affinity) }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.nodeSelector | default .Values.global.nodeSelector) }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.topologySpreadConstraints | default .Values.global.topologySpreadConstraints) }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- if .Values.postgres.enabled }}
       initContainers:
         - name: wait-for-postgres
@@ -205,6 +221,22 @@ spec:
         {{- include "artifact-keeper.dtrack.selectorLabels" . | nindent 8 }}
     spec:
       restartPolicy: OnFailure
+      {{- with (.Values.dependencyTrack.tolerations | default .Values.global.tolerations) }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.affinity | default .Values.global.affinity) }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.nodeSelector | default .Values.global.nodeSelector) }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.dependencyTrack.topologySpreadConstraints | default .Values.global.topologySpreadConstraints) }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: dtrack-init
           image: alpine:3.20
