--- a/helm/templates/meilisearch-deployment.yaml
+++ b/helm/templates/meilisearch-deployment.yaml
@@ -27,6 +27,22 @@ spec:
       labels:
         {{- include "artifact-keeper.meilisearch.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with (.Values.meilisearch.tolerations | default .Values.global.tolerations) }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.meilisearch.affinity | default .Values.global.affinity) }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.meilisearch.nodeSelector | default .Values.global.nodeSelector) }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.meilisearch.topologySpreadConstraints | default .Values.global.topologySpreadConstraints) }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       initContainers:
         - name: version-guard
           image: busybox:1.37
