--- a/helm/templates/trivy-deployment.yaml
+++ b/helm/templates/trivy-deployment.yaml
@@ -25,6 +25,22 @@ spec:
       labels:
         {{- include "artifact-keeper.trivy.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with (.Values.trivy.tolerations | default .Values.global.tolerations) }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.trivy.affinity | default .Values.global.affinity) }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.trivy.nodeSelector | default .Values.global.nodeSelector) }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.trivy.topologySpreadConstraints | default .Values.global.topologySpreadConstraints) }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: trivy
           image: "{{ .Values.trivy.image.repository }}:{{ .Values.trivy.image.tag }}"
